# creditlint

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  justfile  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  opencode-critical-bug-scan.yml  opencode-review.yml  opencode-security-review.yml  opencode-triage.yml  release.yml
npm/creditlint/: README.md  package.json
openspec/: config.yaml
openspec/changes/add-enforcement-rollout-skill/: design.md  proposal.md  tasks.md
openspec/changes/add-enforcement-rollout-skill/specs/enforcement-rollout-guidance/: spec.md
openspec/changes/add-enforcement-rollout-skill/specs/workflow-integrations/: spec.md
openspec/changes/add-native-npm-packages/: design.md  proposal.md  tasks.md
openspec/changes/add-native-npm-packages/specs/native-npm-packages/: spec.md
openspec/changes/add-npm-wrapper-package/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-creditlint-mvp/: design.md  proposal.md  tasks.md
openspec/changes/expand-opencode-automation/: design.md  proposal.md  tasks.md
openspec/changes/harden-github-actions/: design.md  proposal.md  tasks.md
openspec/changes/harden-opencode-workflows/: design.md  proposal.md  tasks.md
scripts/: bootstrap-npm-trust-packages.sh  publish-npm-packages.sh  smoke-release-binary.ps1  smoke-release-binary.sh
skills/enforcement-rollout/: SKILL.md
src/: config.rs  git.rs  github.rs  lib.rs  main.rs  reporter.rs
src/cli/: mod.rs
src/policy/: mod.rs
tests/: check_cli.rs
(+7 files in other folders)
