[package]
name = "creditlint"
version = "0.1.0"
edition = "2024"
description = "CLI for enforcing Git credit and authorship metadata policy"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Drswith/creditlint"
rust-version = "1.93"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"
