[package]
name = "creditlint"
version = "0.1.2"
edition = "2024"
description = "CLI for enforcing Git credit and authorship metadata policy"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Drswith/creditlint"
homepage = "https://github.com/Drswith/creditlint"
documentation = "https://docs.rs/creditlint"
rust-version = "1.93"
keywords = ["git", "cli", "compliance", "policy", "authors"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.17"

[dev-dependencies]
assert_cmd = "2.1.1"
tempfile = "3.23.0"
